--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "BakingBunnyDB": "server=localhost;user id=root;password=bakingbunny;port=3306;database=bakingbunny;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:8080"
+      }
+    }
+  }
 }
