--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MimeKit" Version="2.13.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.26" />
     <PackageReference Include="NLog" Version="4.7.10" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.13.0" />
