--- a/WebApi/nlog.config
+++ b/WebApi/nlog.config
@@ -11,8 +11,8 @@
     <target name="console" xsi:type="ColoredConsole" layout="${longdate} ${uppercase:${level}} ${message}"  />
     <target xsi:type="Database"
             name="database"
-            dbProvider="System.Data.SqlClient"
-            connectionString="Data Source=localhost; Initial Catalog=bakingbunny; User Id=root; Password=bakingbunny;"
+            dbProvider="MySql.Data.MySqlClient.MySqlConnection, MySql.Data"
+            connectionString="${configsetting:item=ConnectionStrings.prodBakingBunnyDB}"
             commandText="INSERT INTO ErrorLog (errorDate, message, level, additionalInfo) VALUES (current_timestamp(), @msg, @level, @addition);">
       <parameter name="@msg" layout="${exception:format=tostring}"  />
       <parameter name="@level" layout="${level}" />
