--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="MimeKit" Version="2.13.0" />
     <PackageReference Include="MySql.Data" Version="8.0.26" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.10" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.13.0" />
